Fix scroll behaviour on collapse shortcode

--- a/themes/terminal/assets/css/main.scss
+++ b/themes/terminal/assets/css/main.scss
@@ -360,7 +360,7 @@ summary {
   user-select:none;
 }
 
- .scrollable {
+ .scrollable > .details-inner {
   max-height: 300px;
   overflow: scroll;
   scroll-behavior: smooth;
